--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,6 +3,6 @@ chapter_name: "Chapter "
 repo: https://github.com/seankross/bookdown-start
 output_dir: docs
 rmd_files: ["index.Rmd", "01-Introduction.Rmd", "02-Statistical-Functions.Rmd", "03-Code.Rmd", "04-Errors.Rmd", 
-            "05-Statistics-with_mulitple-variables.Rmd", "06-Other.Rmd", "07-Other.Rmd"]
+            "05-Statistics-with_mulitple-variables.Rmd", "06-Graphs.Rmd", "07-Other.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
